--- a/app/styles/_content.scss
+++ b/app/styles/_content.scss
@@ -53,7 +53,7 @@
 .descript-text {
   padding-bottom: 30px;
 
-  span {
+  strong {
     color: $primaryColor;
   }
 }
@@ -84,5 +84,6 @@
     font-size: 14px;
     line-height: 18px;
     max-width: 220px;
+    padding-top: 5px;
   }
 }
