--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -22,6 +22,31 @@
   }
 }
 
+.footer-link a,
+.footer-link a:hover {
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.footer-link a {
+  -webkit-filter: brightness(0.7);
+  -moz-filter: brightness(0.7);
+  -o-filter: brightness(0.7);
+  -ms-filter: brightness(0.7);
+  filter: brightness(0.7);
+}
+
+.footer-link a:hover {
+  -webkit-filter: brightness(1);
+  -moz-filter: brightness(1);
+  -o-filter: brightness(1);
+  -ms-filter: brightness(1);
+  filter: brightness(1);
+}
+
 .footer-bar {
   background: url(../images/footer-bar.png) repeat-x;
   height: 7px;
