--- a/app/styles/_structure.scss
+++ b/app/styles/_structure.scss
@@ -20,11 +20,27 @@
   -moz-display: flex;
   -ms-display: flex;
   display: flex;
+  display:-webkit-box;
+  display:-webkit-flex;
+  display:-webkit-flexbox;
+  display:-moz-flex;
+  display:-moz-box;
+  display:-ms-flexbox;
+  display: -webkit-flex;
 }
 
-.container-column{flex-direction: column;}
-.container-row {flex-direction: row;}
+.container-column{
+  -webkit-flex-direction: column;
+   flex-direction: column;
+}
+.container-row {
+  -webkit-flex-direction: row;
+  flex-direction: row;
+}
 
 .block {
+  -webkit-flex: 1 1;
+  -webkit-box-flex: 1;
   flex: 1 1;
+  width: 100%;
 }
