--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -3,6 +3,7 @@
 \*------------------------------------*/
 /**
  * COLOR............. color variables
+ * EXTEND............. extend for display: flex
  * BASE.............
  */
 
@@ -21,6 +22,11 @@ $gray555: #555;
 
 $back-gray-default: #182024;
 $back-gray-footer: #11171a;
+
+/*------------------------------------*\
+    $EXTEND
+\*------------------------------------*/
+
 
 /*------------------------------------*\
     $BASE
