--- a/app/styles/_mediaQueries.scss
+++ b/app/styles/_mediaQueries.scss
@@ -32,6 +32,7 @@
   }
 
   .content-icon {
+    -ms-flex-direction: column;
     -webkit-flex-direction: column;
     flex-direction: column;
     margin-top: 20px;
@@ -85,8 +86,10 @@
   }
 
   .wrapper-content {
+    -ms-aligns-items: center;
     -webkit-align-items: center;
     align-items: center;
+    -ms-flex-direction: column;
     -webkit-flex-direction: column;
     flex-direction: column;
     padding-left: 10%;
@@ -95,8 +98,10 @@
 
 
   .block {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    box-flex: 1;
     -webkit-flex: 1 1;
-    -ms-flex: 1 1;
     flex: 1 1 auto;
   }
 
@@ -105,6 +110,7 @@
   }
 
   .content-icon {
+    -ms-flex-direction: row;
     -webkit-flex-direction: row;
     flex-direction: row;
   }
@@ -127,6 +133,7 @@
     height: 556px;
   }
   .content-icon {
+    -ms-flex-direction: column;
     -webkit-flex-direction: column;
     flex-direction: column;
   }
@@ -135,6 +142,7 @@
 
   .block-icon:last-child {
     margin-top: 50px;
+    margin-right: 0;
     padding-left: 0;
   }
 
@@ -152,6 +160,7 @@
     }
 
   .container-call-to-action {
+    -ms-flex-direction: column;
     -webkit-flex-direction: column;
     flex-direction: column;
 
@@ -161,8 +170,9 @@
     }
 
     input {
-      padding: 13px 0;
+      padding: 13px 0 13px 10px;
       text-align: center;
+      display: inline-block;
     }
   }
 
@@ -187,8 +197,10 @@
   }
 
   .wrapper-content {
+    -ms-aligns-items: center;
     -webkit-align-items: center;
     align-items: center;
+    -ms-flex-direction: column;
     -webkit-flex-direction: column;
     flex-direction: column;
     padding-left: 5%;
@@ -207,6 +219,22 @@
 
 /* ---- max-width : 360px ---- */
 @media screen and (max-width: 360px) {
+  .footer-link{
+    -ms-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    text-align: center;
+
+    a:first-child {
+      display: block;
+      padding-right: 0;
+      padding-bottom: 20px;
+    }
+  }
+
+  .container-call-to-action input {
+    width: 260px;
+    }
   .content-title h2 {
     font-size: 35px;
     line-height: 40px;
