--- a/app/styles/_structure.scss
+++ b/app/styles/_structure.scss
@@ -30,17 +30,22 @@
 }
 
 .container-column{
+  -ms-flex-direction: column;
   -webkit-flex-direction: column;
    flex-direction: column;
 }
+
 .container-row {
+  -ms-flex-direction: row;
   -webkit-flex-direction: row;
   flex-direction: row;
 }
 
 .block {
-  -webkit-flex: 1 1;
   -webkit-box-flex: 1;
+  -ms-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1 1;
   flex: 1 1;
   width: 100%;
 }
